[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-rail-freight-uk-mcp"
version = "1.0.0"
description = "UK rail freight compliance — ORR licensing, ROGS safety certificate, Railway Interoperability Regulations 2011, TSI LOC&PAS/WAG, RID dangerous goods, ORR 14 Major Issues inspection prep, Network Rail capacity access. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "rail-freight", "orr", "rogs", "rir-2011", "tsi", "network-rail", "rid", "uk-compliance", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-rail-freight-uk-mcp"

[project.scripts]
meok-rail-freight-uk-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
